# dnsoverhttps

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs
tests/: upstream_server.rs
