[package]
name = "dnsoverhttps"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

readme = "README.md"
license = "MIT"

homepage = "https://github.com/badboy/dnsoverhttps"
documentation = "https://docs.rs/dnsoverhttps"
repository = "https://github.com/badboy/dnsoverhttps"

include = [
  "Cargo.toml",
  "README*",
  "LICENSE*",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
]

[dependencies]
base64 = "0.9.0"
reqwest = "0.8.4"
trust-dns = "0.13.0"
trust-dns-proto = "0.2.0"
failure = "0.1.1"
