[package]
name = "dnsoverhttps"
version = "0.2.0"
description = "Resolve hostnames by sending DNS queries over HTTPS"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

readme = "README.md"
license = "MIT"

homepage = "https://github.com/badboy/dnsoverhttps"
documentation = "https://docs.rs/dnsoverhttps"
repository = "https://github.com/badboy/dnsoverhttps"

include = [
  "Cargo.toml",
  "README*",
  "LICENSE*",
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
]

[dependencies]
reqwest = "0.8.4"
trust-dns = "0.13.0"
trust-dns-proto = "0.2.0"
failure = "0.1.1"
log = "0.4"
env_logger = "0.5"
